--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,6 +69,13 @@
     );
   }
 
+  .header-gradient {
+    background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+  }
+
   @keyframes in-y {
     from {
       transform: translateY(20px);
