--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import '../styles.css';
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -10,7 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    
+
     <script defer src="/_vercel/insights/script.js"></script>
 
     <link rel="manifest" href="/site.webmanifest" />
@@ -23,96 +27,7 @@
 
     <meta name="description" content="Sam Brocklehurst is a full stack developer based in the UK." />
   </head>
-  <body>
-    <div class="px-4 md:max-w-5xl mx-auto">
-      <slot />
-    </div>
+  <body class="bg-black text-neutral-100">
+    <slot />
   </body>
 </html>
-
-<style is:global>
-  :root {
-    --font-sans: 'Rubik', sans-serif;
-    --dark-background: rgb(13, 13, 13);
-    --neutral-text: rgb(255, 255, 255);
-    --neutral-secondary: rgb(255, 255, 255, 0.7);
-    --neutral-tertiary: rgb(255, 255, 255, 0.5);
-    --cursor-y: 0;
-    --cursor-x: 0;
-  }
-
-  html,
-  body {
-    font-family: var(--font-sans);
-    background-color: var(--dark-background);
-    color: var(--neutral-text);
-    text-rendering: optimizelegibility;
-    text-size-adjust: none;
-    color-scheme: dark;
-    min-height: 100vh;
-  }
-
-  *::selection {
-    background-color: var(--neutral-text);
-    color: var(--dark-background);
-  }
-
-  *:focus-visible {
-    outline: 2px solid var(--neutral-text);
-    border-radius: 2px;
-    outline-offset: 2px;
-  }
-
-  .cursor-shine {
-    background: radial-gradient(
-      600px circle at var(--cursor-x) var(--cursor-y),
-      rgba(255, 255, 255, 0.08),
-      transparent 40%
-    );
-  }
-
-  .header-gradient {
-    background: linear-gradient(to right bottom, rgb(255, 255, 255) 30%, rgba(255, 255, 255, 0.38));
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
-  }
-
-  @keyframes in-y {
-    from {
-      transform: translateY(20px);
-      opacity: 0;
-    }
-    to {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes in-y-2 {
-    from {
-      transform: translateY(-12px);
-      opacity: 0;
-    }
-    to {
-      transform: translateY(0);
-      opacity: 1;
-    }
-  }
-
-  @keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 1;
-    }
-  }
-</style>
-
-<script>
-  console.log('Thanks for visiting my portflio!');
-  console.log('Here are some secret links:');
-  console.log('- https://sambrock.com/projects/pace.pdf (An unfeatured project)');
-  console.log('- https://filmlist.sambrock.com/v/ayjslyrgiddn (Some of my favourite films)');
-</script>
