--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,26 +8,17 @@ import '../styles.css';
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Sam Brocklehurst — Full Stack Developer</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-
     <script defer src="/_vercel/insights/script.js"></script>
 
     <link rel="manifest" href="/site.webmanifest" />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon//favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ff1700" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000" />
 
-    <meta name="description" content="Sam Brocklehurst is a full stack developer based in the UK." />
+    <meta name="description" content="Sam Brocklehurst is a full stack developer based in Leeds, UK." />
   </head>
-  <body class="bg-black text-neutral-100">
+  <body class="bg-background-0 text-foreground-0">
     <slot />
   </body>
 </html>
