--- a/src/components/projects/Vendee.astro
+++ b/src/components/projects/Vendee.astro
@@ -5,7 +5,7 @@ import VendeeLogo from '../../assets/vendee.svg';
 
 <Project
   title="Vendee"
-  href="https://sambrock.com/vendee"
+  href="https://sambrock.com/projects/vendee.pdf"
   hrefLabel="sambrock.com/vendee"
   description="A research project using AI and IoT to modernise physical retail — using machine learning to track occupancy, product interest & dynamic pricing for improved in-store analytics."
 >
